# JUNOOfflineProcess

./: .gitignore  CpAutoRunCalibration.sh  CpAutoRunDetsim.sh  CpAutoRunPdf.sh  CpAutoRunPdf_old.sh  CpAutoRunRecQTMLE.sh  README.md
PDF_sample/: CMakeLists.txt  CpAutoRunPdf.sh  ck_step.sh  make.in  mvPDFIntoDestination.sh  pdf.sh
PDF_sample/GenQPDFAlg/: CMakeLists.txt
PDF_sample/GenQPDFAlg/share/: Genqpdf.py  gen-rec.sh  old_gen-rec.sh
PDF_sample/SampleFiles/: AvgNPEQpdf.C  Collect_R1.C  Collect_comb.C  genpemap.py  pComb.C
PDF_sample/amd64_linux26/: GenCalibPDF.make  GenCalibPDFVertexAndEnergy_python.in  GenCalibPDFVertexAndEnergy_python.make  constituents.make  make.in
PDF_sample/cmt/: cleanup.sh  setup.sh
PDF_sample/share/: gen.sh  sample-detsim-e+_parent.sh
PDF_sample/src/: GenCalibPDF.cc  GenCalibPDF.h
PDF_sample_old/SampleFiles/: Collect_R1.C  DNnPETimePdf_GL.C
PDF_sample_old/amd64_linux26/: GenCalibPDF.in  GenCalibPDF_dependencies.make  (+3 more)
calib/: Calibration_force.sh  CpAutoRunCalibration.sh  README.md  autoRun_calibration.sh
detsim/: README.md  auto_jw_sub.sh  bashrc_sample  compare_C14_detsim_hitTime.C  first_sub_for_calibration.sh  genC14elecinput.sh  jw_gen_run.sh  jw_main.sh  jw_onkey.sh  jw_sub.sh  mvnotROOTfiles.sh  onekey.sh  readTruthHitTime.C  tmp.txt  tmpSck.sh
jwtest/: CMakeLists.txt
jwtest/GenCalibPDFAlg/: CMakeLists.txt
recQTMLE/: README.md  RecQTMLE.sh  find_errfiles.sh  gen.sh  gen_eplus.sh
timeWindowGridSearch/: CMakeLists.txt  build.sh  ck.sh  draw.C  getGe68rec0.C  grid_gen.sh  jw_gen_run.sh  jw_main.sh  pdf.sh
(+207 files in other folders)
